deployments/royalafg.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: royalafg
  labels:
    name: royalafg
