deployments/eventstore.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventstore
spec:
  selector:
    app: eventstore
  ports:
  - port: 2113
    targetPort: 2113
    name: db
  - port: 1113
    targetPort: 1113
    name: ui
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eventstore
spec:
  selector:
    matchLabels:
      app: eventstore
  serviceName: eventstore
  replicas: 1
  template:
    metadata:
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
      labels:
        app: eventstore
    spec:
      containers:
      - name: eventstore
        image: eventstore/eventstore:latest
        args:
          - --insecure
          - --run-projections=All
          - --enable-external-tcp 
          - --enable-atom-pub-over-http
        ports:
          - containerPort: 2113
            name: db
          - containerPort: 1113
            name: ui
        volumeMounts:
          - mountPath: "/usr/data/eventstore"
            name: eventstore-pv-storage
  volumeClaimTemplates:
    - metadata:
        name: eventstore-pv-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
