deployments/consul-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: consul-ui
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/consul`)
      kind: Rule
      services:
        - name: consul
          port: 8500
