deployments/dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: royalafg-auth
spec:
  entryPoints:
    - web
  routes:
    - match: Host("dashoard.royalafg.games") && PathPrefix(`/`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          namespace: "kubernetes-dashboard"
          port: 8080
